Minor edits and Update to bio figures
Changed bds to fishery

--- a/0_Executive_Summary.Rmd
+++ b/0_Executive_Summary.Rmd
@@ -6,7 +6,7 @@ This assessment reports the status of the `r spp` rockfish (\emph{`r spp.sci`}) 
 
 
 ##Landings{-}
-Harvest of `r spp` first exceeded 1 mt off the US west coast in `r Dat_start_mod1`.  Catches ramped up in the 1940s with large removals in Washington waters.  During the 1950s the removals primary occurred in Oregon waters with catches from Washington declining following the 1940s. The largest removals, occurring between 1966-1968, were largely a result of harvest by foreign vessels.  The fishery proceeded with more moderate removals ranging between `r min(round(Tot.catch.df[Tot.catch.df[,1] >= 1969 & Tot.catch.df[,1] <= 1980,2],0))` to `r max(round(Tot.catch.df[Tot.catch.df[,1] >= 1969 & Tot.catch.df[,1] <= 1980,2],0))` metric  tons (mt) per year between 1969 and 1980. Removals generally declined from 1981 to 1994 to between `r min(round(Tot.catch.df[Tot.catch.df[,1] >= 1981 & Tot.catch.df[,1] <= 1994,2],0))` and `r max(round(Tot.catch.df[Tot.catch.df[,1] >= 1981 & Tot.catch.df[,1] <= 1994,2],0))` mt per year.  `r spp` was declared overfished in 1999, resulting in large reductions in harvest in years since the declaration.  Since 2000, annual landings of `r spp` have ranged between `r paste0( min(round(Tot.catch.df[Tot.catch.df[,1] > 2000 & Tot.catch.df[,1] <= Dat_end_mod1,2],0)), '-', max(round(Tot.catch.df[Tot.catch.df[,1] > 2000 & Tot.catch.df[,1] <= Dat_end_mod1,2],0)) )` mt, with landings in `r Dat_end_mod1` totaling `r round(Tot.catch.df[Tot.catch.df[,1] == Dat_end_mod1,2],0)` mt.
+Harvest of `r spp` first exceeded 1 mt off the US west coast in `r Dat_start_mod1`.  Catches ramped up in the 1940s with large removals in Washington waters.  During the 1950s the removals primary occurred in Oregon waters with catches from Washington declining following the 1940s. The largest removals, occurring between 1966-1968, were largely a result of harvest by foreign vessels.  The fishery proceeded with more moderate removals ranging between `r prettyNum(as.numeric(min(round(Tot.catch.df[Tot.catch.df[,1] >= 1969 & Tot.catch.df[,1] <= 1980,2],0))))` to `r prettyNum(as.numeric(max(round(Tot.catch.df[Tot.catch.df[,1] >= 1969 & Tot.catch.df[,1] <= 1980,2],0))))` metric  tons (mt) per year between 1969 and 1980. Removals generally declined from 1981 to 1994 to between `r min(round(Tot.catch.df[Tot.catch.df[,1] >= 1981 & Tot.catch.df[,1] <= 1994,2],0))` and `r max(round(Tot.catch.df[Tot.catch.df[,1] >= 1981 & Tot.catch.df[,1] <= 1994,2],0))` mt per year.  `r spp` was declared overfished in 1999, resulting in large reductions in harvest in years since the declaration.  Since 2000, annual landings of `r spp` have ranged between `r paste0( min(round(Tot.catch.df[Tot.catch.df[,1] > 2000 & Tot.catch.df[,1] <= Dat_end_mod1,2],0)), '-', max(round(Tot.catch.df[Tot.catch.df[,1] > 2000 & Tot.catch.df[,1] <= Dat_end_mod1,2],0)) )` mt, with landings in `r Dat_end_mod1` totaling `r round(Tot.catch.df[Tot.catch.df[,1] == Dat_end_mod1,2],0)` mt.
 
 `r spp` are a desirable market species and discarding has historically been low.  However, management restrictions (e.g. trip limits) resulted in increased discarding starting in the early 1990s.  During the 2000s discarding increased for `r spp` due to harvest restrictions imposed to allow rebuilding, with estimated discard rates from the fishery peaking in 2009 and 2010 to approximately `r paste0(round(100*max(mod1$discard[mod1$discard$Yr ==2009, "Obs"], mod1$discard[mod1$discard$Yr ==2010, "Obs"]),0),'%')`, prior to implementation of catch shares in 2011.  Since 2011, discarding of `r spp` has been estimated to be less than `r paste0(round(100*max(mod1$discard[mod1$discard$Yr >=2011, "Obs"]),1),'%')`.
 
@@ -38,11 +38,11 @@ Harvest of `r spp` first exceeded 1 mt off the US west coast in `r Dat_start_mod
 ##Data and Assessment{-}
 This a new full assessment for `r spp`, which was last assessed in 2011.  In this assessment, aspects of the model including landings, data, and modelling assumptions were re-evaluated. The assessment was conducted using the length- and age-structured modeling software Stock Synthesis (version 3.30.03.05).  The coastwide population was modeled allowing separate growth and mortality parameters for each sex (a two-sex model) from `r Dat_start_mod1` to `r LastYR` and forecasted beyond `r LastYR`.
 
-All of the data sources included in the base model for `r spp` have been re-evaluated for `r LastYR`. Changes of varying degrees have occurred in the data from those used in previous assessments. The landings history has been updated and extended back to `r Dat_start_mod1`. Harvest was negligible prior to that year. Survey data from the Alaska and Northwest Fisheries Science Centers have been used to construct indices of abundance analyzed using a spatio-temporal delta-model. Length, marginal age, or conditional age-at-length compositions were also created for each fishery-dependent and -independent data source.
+All of the data sources included in the base model for `r spp` have been re-evaluated for `r LastYR`. Changes of varying degrees have occurred in the data from those used in previous assessments. The landings history has been updated and extended back to `r Dat_start_mod1`. Harvest was negligible prior to that year. Survey data from the Alaska and Northwest Fisheries Science Centers have been used to construct indices of abundance analyzed using a spatio-temporal delta-model. Length, marginal age or conditional age-at-length compositions were also created for each fishery-dependent and -independent data source.
 
-The definition of fishing fleets have changed from those in the 2011 assessment.  Three fishing fleets were specified within the model: 1) a combined bottom trawl, mid-water trawl, and fixed gear fleet, where only a small fraction of `r spp` were captured by fixed gear (termed the fishery fleet), 2) the historical foreign fleet, and 3) the at-sea hake fishery.  The fleet grouping were based on discarding practices.  The fishery fleet estimated a retention curve based on discarding data and known management restrictions.  However, very little if any discarding is assumed to have occurred by the foreign fleet and the catch reported by the at-sea hake fishery accounts for both discarded and landed fish and hence, no additional mortality was estimated for each of these fleets.  
+The definition of fishing fleets have changed from those in the 2011 assessment.  Three fishing fleets were specified within the model: 1) a combined bottom trawl, mid-water trawl, and fixed gear fleet, where only a small fraction of `r spp` were captured by fixed gear (termed the fishery fleet), 2) the historical foreign fleet, and 3) the at-sea hake fishery.  The fleet grouping was based on discarding practices.  The fishery fleet estimated a retention curve based on discarding data and known management restrictions.  However, very little if any discarding is assumed to have occurred by the foreign fleet and the catch reported by the at-sea hake fishery accounts for both discarded and landed fish and hence, no additional mortality was estimated for each of these fleets.  
 
-The assessment uses landings data and discard-fraction estimates; catch-per-unit-effort and survey indices; length- or age-composition data for each year and fishery or survey (with conditional age-at-length compositional data for the NWFSC shelf-slope survey); information on weight-at-length, maturity-at-length, and fecundity-at-length; information on natural mortality and the steepness of the Beverton-Holt stock-recruitment relationship; and estimates of ageing error. Recruitment at "equilibrium spawning output", length-based selectivity of the fisheries and surveys, retention of the fishery, catchability of the surveys, growth, the time-series of spawning output, age and size structure, and current and projected future stock status are outputs of the model. Natural mortality (`r round(mod1$parameters[mod1$parameters$Label == "NatM_p_1_Fem_GP_1","Value"],3)` yr^-1^) and steepness (`r print(mod1$parameters[mod1$parameters$Label == "SR_BH_steep","Value"],2)`) were fixed in the final model. This was done due to relatively flat likelihood surfaces, such that fixing parameters and then varying them in sensitivity analyses was deemed the best way to characterize uncertainty.
+The assessment uses landings data and discard-fraction estimates; survey indices of abundance; length- or age-composition data for each year and fishery or survey (with conditional age-at-length compositional data for the NWFSC shelf-slope survey); information on weight-at-length, maturity-at-length, and fecundity-at-length; information on natural mortality and the steepness of the Beverton-Holt stock-recruitment relationship; and estimates of ageing error. Recruitment at "equilibrium spawning output", length-based selectivity of the fisheries and surveys, retention of the fishery, catchability of the surveys, growth, the time-series of spawning output, age and size structure, and current and projected future stock status are outputs of the model. Natural mortality (`r round(mod1$parameters[mod1$parameters$Label == "NatM_p_1_Fem_GP_1","Value"],3)` yr^-1^) and steepness (`r print(mod1$parameters[mod1$parameters$Label == "SR_BH_steep","Value"],2)`) were fixed in the final model. This was done due to relatively flat likelihood surfaces, such that fixing parameters and then varying them in sensitivity analyses was deemed the best way to characterize uncertainty.
 
 Although this assessment using many types of data since the 1980s, there is little information about steepness and natural mortality. Estimates of steepness are uncertain partly because of highly variable recruitment. Uncertainty in natural mortality is common in many fish stock assessments even when length and age data are available. 
 
@@ -172,19 +172,19 @@ Exploitation rates on `r spp` exceeded MSY proxy target harvest rates during the
 
 \begin{enumerate}
 
-\item The current data for `r spp` weighted according to the Francis weighting approach do not contain information regarding steepness.  The estimated final status is highly dependent upon the assumed steepness value, as is typical for most US west coast groundfish assessments.  The data available and the modeling approach applied in 2011 supported a steepness value of 0.40.  However, the current data no longer support this value.  Models the used the mean to the 2017 steepness prior (0.72) resulted in an estimated a stock size near unfished conditions leading to low survey catchabiltiy for the NWFSC shelf-slope survey which were deemed implausible by the Scientific and Statistical Committee (SSC).  A steepness value in the final model was determined by calculating spawning biomass across a range of steepness values (0.25-0.95) which were considered equally likely.  The expected (i.e. arithmetic mean) ending spawning output was calculated which corresponded with a steepness value of 0.50.  Additional research for alternative methods for determining an appropriate steepness values when traditional approaches do not seem appropriate.  
+\item The current data for `r spp` weighted according to the Francis weighting approach do not contain information regarding steepness.  The estimated final status is highly dependent upon the assumed steepness value, as is typical for most US west coast groundfish assessments.  The data available and the modeling approach applied in 2011 supported a steepness value of 0.40.  However, the current data no longer support this value.  Models the used the mean to the 2017 steepness prior (0.72) resulted in an estimated a stock size near unfished conditions leading to low survey catchabiltiy for the NWFSC shelf-slope survey which was deemed implausible by the Scientific and Statistical Committee (SSC).  A steepness value in the final model was determined by calculating spawning output across a range of steepness values (0.25-0.95) which were considered equally likely.  The expected (i.e. arithmetic mean) ending spawning output was calculated and the steepness value most closely associated with the expected value was identified, a value of 0.50.  Additional research for alternative approaches for determining steepness values when traditional approaches do not seem appropriate should be identified.  
 
 \item `r spp` off the US west coast may be a fraction of a much large population extending into Canada or even Alaska. Modelling only a part of the total population might contribute to the lack of correspondence between the survey indices and other data sources, as seen in the ln($R0$) profiles and age-structured production model diagnostics as well as some of the observation variability. While this comment is not intended to reflect badly on the STAT's capabilities, it is important to recognize that stock structure could potentially be a major source of uncertainty regarding the assessment results.
   
 \item The indices of abundance used in the final base model provide almost no information on population scale, as demonstrated in the ln($R0$) profiles examined during the review. The Triennial survey was the only index that provided signal with respect to population scale. However, this survey was removed in the final base model due to concerns about the quality of the survey and conflicts with other data. There are large amounts of composition data in the model, with both age- and length-compositions being included for some fleets. The compositional data and catch are providing the majority of the information on the estimated and derived quantities.
 
-\item Use of conditional-age-at-length composition data provides information on parameters beyond those of the length-at-age relationship. The conditional-age-at-length data are robust to length-based processes (Piner et al. 2016), however they are also influenced by age-based processes (Lee et al. 2017). No age-based observation model processes were used in the assessment model as a link to the data, meaning that the conditional-age-at-length data were assumed to be unbiased with respect to the population. The conditional-age-at-length data were shown to be very influential on the estimated dynamics beyond growth estimates. More theoretical work in this area is needed to understand how to best the use this type of information and what potential systems or observation model processes could invalidate the assumption of randomness at length.
+\item Use of conditional-age-at-length composition data provides information on parameters beyond those of the length-at-age relationship. The conditional-age-at-length data are robust to length-based processes (Piner et al. 2016), however they are also influenced by age-based processes (Lee et al. 2017). No age-based processes were used in the assessment model as a link to the data, meaning that the conditional-age-at-length data were assumed to be unbiased with respect to the population. The conditional-age-at-length data were shown to be very influential on the estimated dynamics beyond growth estimates. More theoretical work in this area is needed to understand how to best the use this type of information and what potential systems or observation model processes could invalidate the assumption of randomness at length.
 
 \end{enumerate}
 
 ##Decision Table{-}    
 
-Model uncertainty has been described by the estimated uncertainty within the base model and by the sensitivities to different model structure. The estimated parameter that resulted in the most variability of predicted status and yield advice was natural mortality ($M$). The 12.5% and 87.5% quantiles based on spawning output uncertainty were used to determine the low and high values for $M$ of 0.04725 and 0.0595 yr^-1^.
+Model uncertainty has been described by the estimated uncertainty within the base model and by the sensitivities to different model structure. The results from the final base model were sensitivey to both the assumed steepness or natural mortality values. The STAT team and the STAR panel agreed to select natural mortality ($M$) as the main axis for uncertainty when projecting the population under alternative harvest strategies. The 12.5% and 87.5% quantiles based on spawning output uncertainty were used to determine the low and high values for $M$ of 0.04725 and 0.0595 yr^-1^.
 
 Due to the sensitivity associated with the assessment given the assumed steepness value the assessment is classified as a Category 2 stock assessment. Therefore, the sigma for P* to determine the catch reduction to account for scientific uncertainty is 0.72, since the estimated sigma in the assessment is less than this for current spawning biomass (`r round(mod1$Pstar_sigma,2)`).
 
