--- a/3_Assessment.Rmd
+++ b/3_Assessment.Rmd
@@ -50,7 +50,7 @@ The STAT team used Stock Synthesis version 3.30.03.05 developed by Dr. Richard M
 ###Priors
 A prior distribution was developed for natural mortality ($M$) from an analysis based on an assumed maximum age of 100 years. The analysis was performed by Owen Hamel (personal communications, NWFSC, NOAA) and used data from Then et al. [-@then_evaluating_2015] to provide a lognormal distribution for natural mortality. The lognormal prior has a median of 0.054 and a standard error of 0.438. 
 
-The prior for steepness ($h$) assumed a beta distribution with parameters based on an update of the Thorson-Dorn rockfish prior (commonly used in past West Coast rockfish assessments) conducted by James Thorson (personal communication, NWFSC, NOAA) which was reviewed and endorsed by the Scientific and Statistical Committee (SSC) in 2017. The prior is a beta distribution with $\mu$=0.72 and $\sigma$=0.15.  However, fixing steepness within the model resulted in what was deemed to be on the verge of implausible with very low catchability by the NWFSC shelf-slope survey. The Groundfish Subcommittee of the SSC (GFSC) recommended fixing steepness, determined by the expected (i.e. arithmetic mean) spawning output value across a range of steepness values (see Appendix D, section \ref{appendix-d.-ssc-groundfish-subcommittee-discussion-regarding-steepness} for GFSC comments).  The steepness value of 0.50 that most closely corresponded with the expected spawning output was used in the final base model. The previous assessment estimated and fixed steepness equal to 0.40.  The current data do not contain information regarding steepness.  This change in perception is likely due to the observation of large recruitment events in this assessment, updated data weighting approaches, and varying model specifications between the 2011 and the current model.
+The prior for steepness ($h$) assumed a beta distribution with parameters based on an update of the Thorson-Dorn rockfish prior (commonly used in past West Coast rockfish assessments) conducted by James Thorson (personal communication, NWFSC, NOAA) which was reviewed and endorsed by the Scientific and Statistical Committee (SSC) in 2017. The prior is a beta distribution with $\mu$=0.72 and $\sigma$=0.15.  However, fixing steepness within the model resulted in what was deemed to be on the verge of implausible catchability for the NWFSC shelf-slope survey. The Groundfish Subcommittee of the SSC (GFSC) recommended fixing steepness, determined by the expected (i.e. arithmetic mean) spawning output value across a range of steepness values (see Appendix D, section \ref{appendix-d.-ssc-groundfish-subcommittee-discussion-regarding-steepness} for GFSC comments).  The steepness value of 0.50 most closely corresponded with the expected spawning output and was used in the final base model. The previous assessment estimated and fixed steepness equal to 0.40.  The current data do not contain information regarding steepness.  This change in perception is likely due to the observation of large recruitment events in this assessment, updated data weighting approaches, and varying model specifications between the 2011 and the current model.
 
 ###Data Weighting
 
@@ -88,7 +88,7 @@ This assessment estimated discards in the model, so time was spent investigating
 
 Natural mortality was also investigated and a new prior was developed assuming a maximum age of 100 years for females and males. The previous assessment estimated male natural mortality as an offset from a fixed female natural mortality.  This assessment attempted to estimate natural mortality for both sexes using the 2017 updated prior, but based on the results of profiles over the parameter it was determined to be little to no information on natural mortality within the data and hence opted to fix the value for females within the base model.  Upon additional exploration, the model estimated very little difference in male natural mortality relative to females (< 0.002) and in the interest of selecting the model that fit the data with the fewest parameters required, natural mortality for males was fixed equal to the female natural mortality in the base model.
 
-Finally, multiple models were investigated where steepness was either estimated, fixed at the prior, or at an alternate value. The assessment in 2011 determined that there was sufficient information concerning steepness where the parameter was estimated and then fixed at the estimated value of 0.40.  Based upon likelihood profiles performed on the current model, there was no longer support for a steepness value of 0.40. The likelihood profile was flat across various levels of steepness with a very small improvement in likelihood (<0.50 log likelihood units) at the lowest steepness values. Estimating steepness starting at the mean of the "type C" prior, the meta-analysis prior evaluated omitting information from `r spp`,  of 0.76 resulted in very little if any movement from the mean value due to the flat likelihood surface across values for this parameter with the final relative stock status for 2017 being estimated to > 100% of unfished spawning output. The base model fixed steepness at 0.50, determined by calculating current ending spawning output biomass for steepness values ranging from 0.25 to 0.95 in increments of 0.05 and assuming each value to be equally plausible.  The expected (i.e arithmetic mean) spawning output was identified and the most closely corresponding steepness of 0.50 was selected for use in the final base model.  Model sensitivities are provided when steepness was fixed at the 2011 value of 0.40 or when fixed at the mean of the current prior of 0.72. 
+Finally, multiple models were investigated where steepness was either estimated, fixed at the prior, or at an alternate value. The assessment in 2011 determined that there was sufficient information concerning steepness where the parameter was estimated and then fixed at the estimated value of 0.40.  Based upon likelihood profiles performed on the current model, there was no longer support for a steepness value of 0.40. The likelihood profile was flat across various levels of steepness with a very small improvement in likelihood (<0.50 log likelihood units) at the lowest steepness values. Estimating steepness starting at the mean of the "type C" prior, the meta-analysis prior evaluated omitting information from `r spp`,  of 0.76 resulted in very little if any movement from the mean value due to the flat likelihood surface across values for this parameter with the final relative stock status for 2017 being estimated to > 100% of unfished spawning output. The base model fixed steepness at 0.50, determined by calculating current ending spawning outputfor steepness values ranging from 0.25 to 0.95 in increments of 0.05 and assuming each value to be equally plausible.  The expected (i.e arithmetic mean) spawning output was identified and the most closely corresponding steepness of 0.50 was selected for use in the final base model.  Model sensitivities are provided when steepness was fixed at the 2011 value of 0.40 or when fixed at the mean of the current prior of 0.72. 
 
 ###Convergence
 Proper convergence was determined by starting the minimization process from dispersed values of the maximum likelihood estimates to determine if the model found a better minimum. Starting parameters were jittered by 10%. This was repeated 50 times and a better minimum was not found (Table \ref{tab:jitter}). The model did not experience convergence issues when provided reasonable starting values. Through the jittering done as explained above and likelihood profiles, we are confident that the base model as presented represents the best fit to the data given the assumptions made. There were no difficulties in inverting the Hessian to obtain estimates of variability, although much of the early model investigation was done without attempting to estimate a Hessian.  
