--- a/PacificOceanPerch2017_Assessment.tex
+++ b/PacificOceanPerch2017_Assessment.tex
@@ -302,15 +302,15 @@ landings history has been updated and extended back to 1918. Harvest was
 negligible prior to that year. Survey data from the Alaska and Northwest
 Fisheries Science Centers have been used to construct indices of
 abundance analyzed using a spatio-temporal delta-model. Length, marginal
-age, or conditional age-at-length compositions were also created for
-each fishery-dependent and -independent data source.
+age or conditional age-at-length compositions were also created for each
+fishery-dependent and -independent data source.
 
 The definition of fishing fleets have changed from those in the 2011
 assessment. Three fishing fleets were specified within the model: 1) a
 combined bottom trawl, mid-water trawl, and fixed gear fleet, where only
 a small fraction of Pacific ocean perch were captured by fixed gear
 (termed the fishery fleet), 2) the historical foreign fleet, and 3) the
-at-sea hake fishery. The fleet grouping were based on discarding
+at-sea hake fishery. The fleet grouping was based on discarding
 practices. The fishery fleet estimated a retention curve based on
 discarding data and known management restrictions. However, very little
 if any discarding is assumed to have occurred by the foreign fleet and
@@ -318,16 +318,16 @@ the catch reported by the at-sea hake fishery accounts for both
 discarded and landed fish and hence, no additional mortality was
 estimated for each of these fleets.
 
-The assessment uses landings data and discard-fraction estimates;
-catch-per-unit-effort and survey indices; length- or age-composition
-data for each year and fishery or survey (with conditional age-at-length
-compositional data for the NWFSC shelf-slope survey); information on
-weight-at-length, maturity-at-length, and fecundity-at-length;
-information on natural mortality and the steepness of the Beverton-Holt
-stock-recruitment relationship; and estimates of ageing error.
-Recruitment at ``equilibrium spawning output'', length-based selectivity
-of the fisheries and surveys, retention of the fishery, catchability of
-the surveys, growth, the time-series of spawning output, age and size
+The assessment uses landings data and discard-fraction estimates; survey
+indices of abundance; length- or age-composition data for each year and
+fishery or survey (with conditional age-at-length compositional data for
+the NWFSC shelf-slope survey); information on weight-at-length,
+maturity-at-length, and fecundity-at-length; information on natural
+mortality and the steepness of the Beverton-Holt stock-recruitment
+relationship; and estimates of ageing error. Recruitment at
+``equilibrium spawning output'', length-based selectivity of the
+fisheries and surveys, retention of the fishery, catchability of the
+surveys, growth, the time-series of spawning output, age and size
 structure, and current and projected future stock status are outputs of
 the model. Natural mortality (0.054 yr\textsuperscript{-1}) and
 steepness (0.50) were fixed in the final model. This was done due to
@@ -394,18 +394,18 @@ model. \label{fig:RelDeplete_all}}
 \label{tab:SpawningDeplete_mod1}
 \begin{tabular}{l>{\centering}p{1.3in}>{\centering}p{1.2in}>{\centering}p{1in}>{\centering}p{1.2in}}
   \hline
-Year & Spawning Output (million eggs) & \~{} 95\% confidence interval & Estimated depletion & \~{} 95\% confidence interval \\ 
+Year & Spawning Output (million eggs) & \~{} 95\% Confidence Interval & Estimated Depletion & \~{} 95\% Confidence Interval \\ 
   \hline
-2008 & 3745.00 & 1620 - 5870 & 0.54 & 0.380 - 0.708 \\ 
-  2009 & 3885.00 & 1688 - 6083 & 0.56 & 0.395 - 0.733 \\ 
-  2010 & 3976.00 & 1731 - 6221 & 0.58 & 0.405 - 0.749 \\ 
-  2011 & 4032.00 & 1759 - 6305 & 0.58 & 0.412 - 0.759 \\ 
-  2012 & 4067.00 & 1780 - 6354 & 0.59 & 0.416 - 0.764 \\ 
-  2013 & 4091.00 & 1797 - 6384 & 0.59 & 0.420 - 0.768 \\ 
-  2014 & 4197.00 & 1857 - 6538 & 0.61 & 0.433 - 0.785 \\ 
-  2015 & 4516.00 & 2021 - 7011 & 0.66 & 0.470 - 0.841 \\ 
-  2016 & 4931.00 & 2231 - 7630 & 0.72 & 0.517 - 0.914 \\ 
-  2017 & 5280.00 & 2407 - 8153 & 0.77 & 0.556 - 0.977 \\ 
+2008 & 3745 & 1620 - 5870 & 0.544 & 0.380 - 0.708 \\ 
+  2009 & 3885 & 1688 - 6083 & 0.564 & 0.395 - 0.733 \\ 
+  2010 & 3976 & 1731 - 6221 & 0.577 & 0.405 - 0.749 \\ 
+  2011 & 4032 & 1759 - 6305 & 0.585 & 0.412 - 0.759 \\ 
+  2012 & 4067 & 1780 - 6354 & 0.590 & 0.416 - 0.764 \\ 
+  2013 & 4091 & 1797 - 6384 & 0.594 & 0.420 - 0.768 \\ 
+  2014 & 4197 & 1857 - 6538 & 0.609 & 0.433 - 0.785 \\ 
+  2015 & 4516 & 2021 - 7011 & 0.656 & 0.470 - 0.841 \\ 
+  2016 & 4931 & 2231 - 7630 & 0.716 & 0.517 - 0.914 \\ 
+  2017 & 5280 & 2407 - 8153 & 0.766 & 0.556 - 0.977 \\ 
    \hline
 \end{tabular}
 \end{table}
@@ -438,18 +438,18 @@ the base model with 95\% confidence or credibility intervals.
 \label{tab:Recruit_mod1}
 \begin{tabular}{>{\centering}p{.8in}>{\centering}p{1.0in}>{\centering}p{1.4in}>{\centering}p{1.0in}>{\centering}p{1.4in}}
   \hline
-Year & Estimated Recruitment & \~{} 95\% confidence interval & Estimated Recruitment Devs. & \~{} 95\% confidence interval \\ 
+Year & Estimated Recruitment & \~{} 95\% Confidence Interval & Estimated Recruitment Devs. & \~{} 95\% Confidence Interval \\ 
   \hline
-2008 & 116128.00 & 66566 - 202591 & 2.62 & 2.323 - 2.923 \\ 
-  2009 & 4731.00 & 2047 - 10932 & -0.59 & -1.347 - 0.163 \\ 
-  2010 & 7499.00 & 3650 - 15404 & -0.14 & -0.732 - 0.453 \\ 
-  2011 & 15198.00 & 7730 - 29880 & 0.56 & 0.031 - 1.093 \\ 
-  2012 & 2101.00 & 879 - 5026 & -1.42 & -2.237 - -0.603 \\ 
-  2013 & 29027.00 & 13826 - 60941 & 1.12 & 0.482 - 1.754 \\ 
-  2014 & 4630.00 & 1629 - 13160 & -0.81 & -1.863 - 0.238 \\ 
-  2015 & 10661.00 & 2987 - 38052 & -0.00 & -1.372 - 1.364 \\ 
-  2016 & 11016.00 & 3082 - 39382 & 0.00 & -1.372 - 1.372 \\ 
-  2017 & 11253.00 & 3151 - 40194 & 0.00 & -1.372 - 1.372 \\ 
+2008 & 116128 & 66566 - 202591 & 2.623 & 2.323 - 2.923 \\ 
+  2009 & 4731 & 2047 - 10932 & -0.592 & -1.347 - 0.163 \\ 
+  2010 & 7499 & 3650 - 15404 & -0.140 & -0.732 - 0.453 \\ 
+  2011 & 15198 & 7730 - 29880 & 0.562 & 0.031 - 1.093 \\ 
+  2012 & 2101 & 879 - 5026 & -1.420 & -2.237 - -0.603 \\ 
+  2013 & 29027 & 13826 - 60941 & 1.118 & 0.482 - 1.754 \\ 
+  2014 & 4630 & 1629 - 13160 & -0.813 & -1.863 - 0.238 \\ 
+  2015 & 10661 & 2987 - 38052 & -0.004 & -1.372 - 1.364 \\ 
+  2016 & 11016 & 3082 - 39382 & 0.000 & -1.372 - 1.372 \\ 
+  2017 & 11253 & 3151 - 40194 & 0.000 & -1.372 - 1.372 \\ 
    \hline
 \end{tabular}
 \end{table}
@@ -477,7 +477,7 @@ significantly below target levels.
 \label{tab:SPR_Exploit_mod1}
 \begin{tabular}{l>{\centering}p{0.9in}>{\centering}p{1.2in}>{\centering}p{1.2in}>{\centering}p{1.2in}}
   \hline
-Year & (1-SPR)/ (1-SPR50\%) & \~{} 95\% confidence interval & Exploitation rate & \~{} 95\% confidence interval \\ 
+Year & (1-SPR)/ (1-SPR50\%) & \~{} 95\% Confidence Interval & Exploitation Rate & \~{} 95\% Confidence Interval \\ 
   \hline
 2007 & 0.087 & 0.039 - 0.134 & 0.002 & 0.001 - 0.003 \\ 
   2008 & 0.072 & 0.031 - 0.113 & 0.002 & 0.001 - 0.002 \\ 
@@ -631,7 +631,7 @@ far below the Overfishing Limit (OFL) and Acceptable Biological Catch
 \scalebox{0.9}{
 \begin{tabular}{>{\raggedleft}p{0.5in}>{\centering}p{1.1in}>{\centering}p{1.1in}>{\centering}p{1.1in}>{\centering}p{1.1in}>{\centering}p{1.1in}}
   \hline
-Year & OFL (mt; ABC prior to 2011) & ABC (mt) & ACL (mt; OY prior to 2011) & Total landings (mt) & Estimated total catch (mt) \\ 
+Year & OFL (mt; ABC prior to 2011) & ABC (mt) & ACL (mt; OY prior to 2011) & Total Landings (mt) & Estimated Total Catch (mt) \\ 
   \hline
 \text{2007} & 900 &  & 150 & 134 & 159 \\ 
   \text{2008} & 911 &  & 150 & 92 & 135 \\ 
@@ -657,13 +657,13 @@ Uncertainties}
 
 \begin{enumerate}
 
-\item The current data for Pacific ocean perch weighted according to the Francis weighting approach do not contain information regarding steepness.  The estimated final status is highly dependent upon the assumed steepness value, as is typical for most US west coast groundfish assessments.  The data available and the modeling approach applied in 2011 supported a steepness value of 0.40.  However, the current data no longer support this value.  Models the used the mean to the 2017 steepness prior (0.72) resulted in an estimated a stock size near unfished conditions leading to low survey catchabiltiy for the NWFSC shelf-slope survey which were deemed implausible by the Scientific and Statistical Committee (SSC).  A steepness value in the final model was determined by calculating spawning biomass across a range of steepness values (0.25-0.95) which were considered equally likely.  The expected (i.e. arithmetic mean) ending spawning output was calculated which corresponded with a steepness value of 0.50.  Additional research for alternative methods for determining an appropriate steepness values when traditional approaches do not seem appropriate.  
+\item The current data for Pacific ocean perch weighted according to the Francis weighting approach do not contain information regarding steepness.  The estimated final status is highly dependent upon the assumed steepness value, as is typical for most US west coast groundfish assessments.  The data available and the modeling approach applied in 2011 supported a steepness value of 0.40.  However, the current data no longer support this value.  Models the used the mean to the 2017 steepness prior (0.72) resulted in an estimated a stock size near unfished conditions leading to low survey catchabiltiy for the NWFSC shelf-slope survey which was deemed implausible by the Scientific and Statistical Committee (SSC).  A steepness value in the final model was determined by calculating spawning output across a range of steepness values (0.25-0.95) which were considered equally likely.  The expected (i.e. arithmetic mean) ending spawning output was calculated and the steepness value most closely associated with the expected value was identified, a value of 0.50.  Additional research for alternative approaches for determining steepness values when traditional approaches do not seem appropriate should be identified.  
 
 \item Pacific ocean perch off the US west coast may be a fraction of a much large population extending into Canada or even Alaska. Modelling only a part of the total population might contribute to the lack of correspondence between the survey indices and other data sources, as seen in the ln($R0$) profiles and age-structured production model diagnostics as well as some of the observation variability. While this comment is not intended to reflect badly on the STAT's capabilities, it is important to recognize that stock structure could potentially be a major source of uncertainty regarding the assessment results.
   
 \item The indices of abundance used in the final base model provide almost no information on population scale, as demonstrated in the ln($R0$) profiles examined during the review. The Triennial survey was the only index that provided signal with respect to population scale. However, this survey was removed in the final base model due to concerns about the quality of the survey and conflicts with other data. There are large amounts of composition data in the model, with both age- and length-compositions being included for some fleets. The compositional data and catch are providing the majority of the information on the estimated and derived quantities.
 
-\item Use of conditional-age-at-length composition data provides information on parameters beyond those of the length-at-age relationship. The conditional-age-at-length data are robust to length-based processes (Piner et al. 2016), however they are also influenced by age-based processes (Lee et al. 2017). No age-based observation model processes were used in the assessment model as a link to the data, meaning that the conditional-age-at-length data were assumed to be unbiased with respect to the population. The conditional-age-at-length data were shown to be very influential on the estimated dynamics beyond growth estimates. More theoretical work in this area is needed to understand how to best the use this type of information and what potential systems or observation model processes could invalidate the assumption of randomness at length.
+\item Use of conditional-age-at-length composition data provides information on parameters beyond those of the length-at-age relationship. The conditional-age-at-length data are robust to length-based processes (Piner et al. 2016), however they are also influenced by age-based processes (Lee et al. 2017). No age-based processes were used in the assessment model as a link to the data, meaning that the conditional-age-at-length data were assumed to be unbiased with respect to the population. The conditional-age-at-length data were shown to be very influential on the estimated dynamics beyond growth estimates. More theoretical work in this area is needed to understand how to best the use this type of information and what potential systems or observation model processes could invalidate the assumption of randomness at length.
 
 \end{enumerate}
 
@@ -672,11 +672,13 @@ Uncertainties}
 
 Model uncertainty has been described by the estimated uncertainty within
 the base model and by the sensitivities to different model structure.
-The estimated parameter that resulted in the most variability of
-predicted status and yield advice was natural mortality (\(M\)). The
-12.5\% and 87.5\% quantiles based on spawning output uncertainty were
-used to determine the low and high values for \(M\) of 0.04725 and
-0.0595 yr\textsuperscript{-1}.
+The results from the final base model were sensitivey to both the
+assumed steepness or natural mortality values. The STAT team and the
+STAR panel agreed to select natural mortality (\(M\)) as the main axis
+for uncertainty when projecting the population under alternative harvest
+strategies. The 12.5\% and 87.5\% quantiles based on spawning output
+uncertainty were used to determine the low and high values for \(M\) of
+0.04725 and 0.0595 yr\textsuperscript{-1}.
 
 Due to the sensitivity associated with the assessment given the assumed
 steepness value the assessment is classified as a Category 2 stock
@@ -1053,12 +1055,13 @@ Length compositions were expanded based upon the stratification and the
 age data was used as conditional age-at-length data. The number of tows
 with length data ranged from 33 in 2006 to 69 in 2015 (Table
 \ref{tab:NWcombo_Lengths}), where ages were collected for Pacific ocean
-perch in nearly every tow (Table \ref{tab:NWcombo_Ages}). The expanded
-length frequencies from this survey show an increase in small fish
-starting in 2010 (Figure \ref{fig:nw_Length}). The age frequencies
-provide clear evidence of large year-classes moving through the
-population from the 1999, 2000, and 2008 recruitments; with early
-indications of a large 2013 recruitment (Figure \ref{fig:nw_Age}).
+perch in nearly every tow length data were collected (Table
+\ref{tab:NWcombo_Ages}). The expanded length frequencies from this
+survey show an increase in small fish starting in 2010 (Figure
+\ref{fig:nw_Length}). The age frequencies provide clear evidence of
+large year-classes moving through the population from the 1999, 2000,
+and 2008 recruitments; with early indications of a large 2013
+recruitment (Figure \ref{fig:nw_Age}).
 
 The input sample sizes for length and marginal age-composition data for
 all fishery-independent surveys were calculated according to Stewart and
@@ -1818,14 +1821,13 @@ James Thorson (personal communication, NWFSC, NOAA) which was reviewed
 and endorsed by the Scientific and Statistical Committee (SSC) in 2017.
 The prior is a beta distribution with \(\mu\)=0.72 and \(\sigma\)=0.15.
 However, fixing steepness within the model resulted in what was deemed
-to be on the verge of implausible with very low catchability by the
-NWFSC shelf-slope survey. The Groundfish Subcommittee of the SSC (GFSC)
-recommended fixing steepness, determined by the expected
-(i.e.~arithmetic mean) spawning output value across a range of steepness
-values (see Appendix D, section
+to be on the verge of implausible catchability for the NWFSC shelf-slope
+survey. The Groundfish Subcommittee of the SSC (GFSC) recommended fixing
+steepness, determined by the expected (i.e.~arithmetic mean) spawning
+output value across a range of steepness values (see Appendix D, section
 \ref{appendix-d.-ssc-groundfish-subcommittee-discussion-regarding-steepness}
-for GFSC comments). The steepness value of 0.50 that most closely
-corresponded with the expected spawning output was used in the final
+for GFSC comments). The steepness value of 0.50 most closely
+corresponded with the expected spawning output and was used in the final
 base model. The previous assessment estimated and fixed steepness equal
 to 0.40. The current data do not contain information regarding
 steepness. This change in perception is likely due to the observation of
@@ -1978,14 +1980,13 @@ resulted in very little if any movement from the mean value due to the
 flat likelihood surface across values for this parameter with the final
 relative stock status for 2017 being estimated to \textgreater{} 100\%
 of unfished spawning output. The base model fixed steepness at 0.50,
-determined by calculating current ending spawning output biomass for
-steepness values ranging from 0.25 to 0.95 in increments of 0.05 and
-assuming each value to be equally plausible. The expected (i.e
-arithmetic mean) spawning output was identified and the most closely
-corresponding steepness of 0.50 was selected for use in the final base
-model. Model sensitivities are provided when steepness was fixed at the
-2011 value of 0.40 or when fixed at the mean of the current prior of
-0.72.
+determined by calculating current ending spawning outputfor steepness
+values ranging from 0.25 to 0.95 in increments of 0.05 and assuming each
+value to be equally plausible. The expected (i.e arithmetic mean)
+spawning output was identified and the most closely corresponding
+steepness of 0.50 was selected for use in the final base model. Model
+sensitivities are provided when steepness was fixed at the 2011 value of
+0.40 or when fixed at the mean of the current prior of 0.72.
 
 \subsubsection{Convergence}\label{convergence}
 
@@ -3467,7 +3468,7 @@ Starting year & 1918 \\
   Triennial survey & Double Normal \\ 
   AFSC slope survey & Double Normal \\ 
   NWFSC slope survey & Double Normal \\ 
-  NWFSC shelf/slope survey & Double Normal \\ 
+  NWFSC shelf-slope survey & Double Normal \\ 
    &  \\ 
   \underline{Fishery time blocks} &  \\ 
   Fishery selectivity & 1918-1999, 2000-2016 \\ 
